--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             2
           </div>
           <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Pages Content</h2>
-          <p class="leading-relaxed text-base">You can show your page content or anythings on popup. This will save user's time and This is a nice feature as Post content on popup.</p>
+          <p class="leading-relaxed text-base">You can show your page content or anything on the popup. This will save user time and This is a nice feature as Post content on popup.</p>
         </div>
       </div>
       <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -46,7 +46,7 @@
             3
           </div>
           <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Custom Post Type</h2>
-          <p class="leading-relaxed text-base">By showcasing custom post type content in popups, you can create a superior user experience, boosting engagement and satisfaction on your website.</p>
+          <p class="leading-relaxed text-base">By showcasing custom post-type content in popups, you can create a superior user experience, boosting engagement and satisfaction on your website.</p>
         </div>
       </div>
       <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -85,7 +85,7 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto flex flex-wrap">
     <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
-      <iframe style="height: 100%;width: 100%;" src="https://www.youtube.com/watch?v=P8O78APM17c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eRpTPOxPbqI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
       <div class="flex flex-col mb-10 lg:items-start items-center">
